<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"

    tools:context=".vista.Descargas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAlbumDe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtAlbumDe"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textSize="34sp" />

            <ListView
                android:id="@+id/listAlbum"
                android:layout_width="match_parent"
                android:layout_height="508dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/btnDescargar"
                android:backgroundTint="#2C2B2C"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/btnDescargar" />

            <Button
                android:id="@+id/btnAtras"
                android:backgroundTint="#2C2B2C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/btnAtras" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>